--- a/src/components/Button/Button.less
+++ b/src/components/Button/Button.less
@@ -1,9 +1,9 @@
-.container {
+.btn-container {
   width: 100%;
   padding: 14px 40px 13px 40px;
   cursor: pointer;
 
-  background: var(--color-white);
+  background: @color-white;
   border: none;
   border-radius: 5px;
 
@@ -17,6 +17,6 @@
   line-height: inherit;
 }
 
-.container:hover {
-  background: var(--color-yellow);
+.btn-container:hover {
+  background: @color-yellow;
 }
