--- a/src/components/Checkbox/Checkbox.less
+++ b/src/components/Checkbox/Checkbox.less
@@ -7,7 +7,7 @@
 .container {
   font-size: 1rem;
   line-height: 1.2;
-  color: var(--color-greyText);
+  color: @color-greyText;
 
   cursor: pointer;
 
@@ -21,15 +21,15 @@
   width: 20px;
   height: 20px;
 
-  background-color: var(--color-white);
-  border: 1px solid var(--color-border);
-  box-shadow: 0px 1px 2px var(--color-black);
+  background-color: @color-white;
+  border: 1px solid @color-border;
+  box-shadow: 0px 1px 2px @color-black;
   border-radius: 2px;
 }
 
 .input:checked + .flag {
   background: url("../../icons/markCheckbox.svg") no-repeat center;
-  background-color: var(--color-white);
+  background-color: @color-white;
 }
 
 .tag {
