--- a/src/components/Input/Input.less
+++ b/src/components/Input/Input.less
@@ -1,4 +1,4 @@
-.container {
+.input-container {
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -8,8 +8,8 @@
 }
 
 .input {
-  background: var(--color-white);
-  box-shadow: 0px 1px 2px var(--color-black);
+  background: @color-white;
+  box-shadow: 0px 1px 2px @color-black;
   border-radius: 4px;
   padding: 12px;
   border: none;
@@ -28,7 +28,7 @@
   font-size: 1rem;
   line-height: 100%;
   letter-spacing: inherit;
-  color: var(--color-grey);
+  color: @color-grey;
 }
 
 .textarea {
