--- a/src/index.less
+++ b/src/index.less
@@ -1,4 +1,9 @@
 @import "./less/variables.less";
+@import "./pages/MainPage/MainPage.less";
+@import './components/Button/Button.less';
+@import './components/Card/Card.less';
+//@import './components/Checkbox/Checkbox.less';
+@import './components/Input/Input.less';
 
 @font-face {
   font-family: "PoorStory-Regular";
@@ -28,8 +33,8 @@
 
 html {
   font-family: "Oswald-Light", monospace;
-  font-size: 16px;
-  line-height: 19px;
+    font-size: 24px;
+    line-height: 1.3;
   letter-spacing: 0.05rem;
   color: var(--color-commonFont);
   background-color: var(--color-backgroundMain);
