--- a/src/components/Card/Card.less
+++ b/src/components/Card/Card.less
@@ -2,17 +2,28 @@
   background: @color-white;
   box-shadow: 0px 1px 2px @color-black;
   border-radius: 6px;
-  padding: 12px;
+  padding: 18px;
+
   width: 100%;
+  min-height: 130px;
 
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 15px;
   cursor: pointer;
 }
 
+.expired {
+  border: 1px solid red;
+}
+
+.complited {
+  opacity: 0.6;
+  border: 1px solid green;
+}
+
 .card-container:hover {
-  box-shadow: 0px 1px 2px @color-black;
+  box-shadow: 0px 4px 5px @color-black;
 }
 
 .card-header_name {
@@ -21,24 +32,17 @@
   letter-spacing: 0.03em;
 }
 
-.card-header_btn {
+.card-header__btns {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  gap: 2px;
-  padding: 5px;
-  margin: -5px;
+  gap: 15px;
 }
 
-.card-header_btnElem {
-  width: 3px;
-  height: 3px;
-  border-radius: 100%;
-  background: @color-grey;
-}
-
-.card-header_btn:hover > .card-header_btnElem {
-  background: @color-darkgrey;
+.card-btn {
+  padding: 0;
+  width: 25px;
+  height: 25px;
 }
 
 .card-header {
@@ -54,11 +58,25 @@
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
+  flex-wrap: wrap;
+  row-gap: 10px;
+  font-size: 0.9rem;
 }
 
-.card-main_icons {
+.card-main__desc {
+  max-width: 90%;
+}
+
+.card-main__files {
   display: flex;
-  gap: 7px;
-  align-items: center;
-  justify-content: center;
+  gap: 6px;
+}
+
+.card-main__deadline {
+  flex-basis: 100%;
+  font-size: 0.8rem;
+}
+
+.files__img {
+  width: 20px;
 }
