--- a/src/pages/MainPage/MainPage.less
+++ b/src/pages/MainPage/MainPage.less
@@ -5,36 +5,6 @@
   align-items: center;
 }
 
-.cards {
-  display: flex;
-  gap: 20px;
-}
-
-.list {
-  width: 350px;
-}
-
-.header {
-  font-size: 1rem;
-  line-height: 1.2;
-  padding: 12px 30px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-family: "PoorStory-Regular", cursive;
-}
-
-.header_title {
-  text-align: center;
-  font-size: 1.5rem;
-  position: relative;
-}
-
-.header_countTasks {
-  color: @color-grey;
-  font-size: 1.125rem;
-}
-
 .main {
   border: solid 1px @color-yellow;
   border-radius: 7px;
@@ -45,29 +15,11 @@
   gap: 14px;
 
   min-width: 39%;
+  max-width: 48%;
 }
 
 .main_cards {
   display: flex;
   flex-direction: column;
   gap: 30px;
-}
-
-.header_title::after {
-  display: block;
-  position: absolute;
-  left: 0;
-  width: 0;
-  height: 4px;
-  background-color: @color-yellow;
-  content: "";
-  transition: width 0.3s ease-out;
-}
-
-.list:hover .header_title::after {
-  width: 80%;
-}
-
-.list:hover .main {
-  border: 1px solid @color-yellow;
 }
