Настройка модального окна "Создать"

--- a/src/pages/NotFoundPage/NotFoundPage.less
+++ b/src/pages/NotFoundPage/NotFoundPage.less
@@ -15,13 +15,13 @@
 
 @keyframes color-change {
   0% {
-    color: var(--color-commonFont);
+    color: @color-commonFont;
   }
   50% {
-    color: var(--color-darkgrey);
+    color: @color-darkgrey;
   }
   100% {
-    color: var(--color-commonFont);
+    color: @color-commonFont;
   }
 }
 
