--- a/src/index.less
+++ b/src/index.less
@@ -1,6 +1,8 @@
 @import "./less/variables.less";
 @import "./pages/MainPage/MainPage.less";
 @import "./pages/NotFoundPage/NotFoundPage.less";
+@import "./pages/Modal/Modal.less";
+
 @import "./components/Button/Button.less";
 @import "./components/Card/Card.less";
 //@import './components/Checkbox/Checkbox.less';
@@ -37,8 +39,8 @@ html {
   font-size: 24px;
   line-height: 1.3;
   letter-spacing: 0.05rem;
-  color: var(--color-commonFont);
-  background-color: var(--color-backgroundMain);
+  color: @color-commonFont;
+  background-color: @color-backgroundMain;
 }
 
 * {
@@ -63,12 +65,12 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 10px 10px var(--color-track);
+  box-shadow: inset 0 0 10px 10px @color-track;
   border-radius: 10px;
 }
 
 body::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 10px 10px var(--color-thumb);
+  box-shadow: inset 0 0 10px 10px @color-thumb;
   border-radius: 10px;
 }
 
@@ -76,7 +78,7 @@ body::-webkit-scrollbar-thumb {
   width: 100%;
   max-width: 311px;
   font-size: 1rem;
-  color: var(--color-feedback);
+  color: @color-feedback;
   text-align: center;
 }
 
