--- a/src/pages/Modal/Modal.less
+++ b/src/pages/Modal/Modal.less
@@ -21,7 +21,6 @@
 .modal_contentDelete {
   background: @color-background;
   border-radius: 11px;
-  padding: 45px 65px;
   position: relative;
 }
 
@@ -40,6 +39,8 @@
   display: flex;
   flex-direction: column;
   gap: 14px;
+
+  min-width: 620px;
 }
 
 .modal_header {
@@ -50,25 +51,19 @@
   margin-bottom: 20px;
 }
 
-.modal_tags {
-  display: flex;
-  width: 270px;
-  gap: 8px;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
 .modal_headerText {
   font-size: 1rem;
   line-height: 1.2;
   margin-bottom: 24px;
+  text-align: center;
 }
 
 .modal_btn {
-  font-size: 1rem;
+  font-size: 0.9rem;
   line-height: 1;
   color: @color-commonFont;
-  padding: 9px 30px;
+  padding: 15px 36px;
+
   gap: 30px;
 
   background: @color-white;
