Создание окна просмотра таски View

--- a/src/pages/Modal/Modal.less
+++ b/src/pages/Modal/Modal.less
@@ -75,3 +75,19 @@
   display: flex;
   gap: 12px;
 }
+
+.modal_main_card-name {
+  font-size: 1.125rem;
+  line-height: 1;
+  letter-spacing: 0.03em;
+}
+
+.modal_main_card-deadline {
+  flex-basis: 100%;
+  font-size: 0.8rem;
+}
+
+.modal_main-view {
+  border: none;
+  min-height: 170px;
+}
