Изменение цвета border

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,27 +1,28 @@
-  @color-commonFont: #333;
-  @color-greyText: #292929;
+@color-commonFont: #333;
+@color-greyText: #292929;
 
-  @color-backgroundMain: #fcfcfc;
-  @color-background: #f5f5f5;
-  @color-border: #cacaca;
+@color-backgroundMain: #fcfcfc;
+@color-background: #f5f5f5;
+@color-border: #cacaca;
 
-  @color-grey: #929292;
-  @color-darkgrey: #6b6b6b;
-  @color-white: #ffffff;
-  @color-yellow: #ffe445;
-  @color-green: #64b707;
+@color-grey: #929292;
+@color-darkgrey: #6b6b6b;
+@color-white: #ffffff;
+@color-yellow: #ffe445;
+@color-yellow-light: #ffea6e;
+@color-green: #64b707;
 
-  @color-thumb: #a9a9a9;
-  @color-track: #d9d9d9;
+@color-thumb: #a9a9a9;
+@color-track: #d9d9d9;
 
-  @color-feedback: red;
-  @color-black: rgba(0, 0, 0, 0.12);
+@color-feedback: red;
+@color-black: rgba(0, 0, 0, 0.12);
 
-  @color-tag-violet: #e6d3fc;
-  @color-tag-green: #adf8c6;
-  @color-tag-red: #ffcdc1;
-  @color-tag-orange: #ffd3a4;
-  @color-tag-blue: #9eddff;
-  @color-tag-lightGreen: #ceff97;
-  @color-tag-darkBlue: #a5c3ff;
-  @color-tag-yellow: #fff0b4;
+@color-tag-violet: #e6d3fc;
+@color-tag-green: #adf8c6;
+@color-tag-red: #ffcdc1;
+@color-tag-orange: #ffd3a4;
+@color-tag-blue: #9eddff;
+@color-tag-lightGreen: #ceff97;
+@color-tag-darkBlue: #a5c3ff;
+@color-tag-yellow: #fff0b4;
