--- a/src/components/Button/Button.less
+++ b/src/components/Button/Button.less
@@ -3,7 +3,7 @@
   padding: 14px 40px 13px 40px;
   cursor: pointer;
 
-  background: @color-white;
+  background: @color-yellow-light;
   border: none;
   border-radius: 5px;
 
