--- a/src/pages/Modal/Modal.less
+++ b/src/pages/Modal/Modal.less
@@ -91,3 +91,19 @@
   border: none;
   min-height: 170px;
 }
+
+.input-date {
+  width: 220px;
+  background-color: @color-background;
+  padding: 15px;
+  color: @color-commonFont;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+::-webkit-calendar-picker-indicator {
+  padding: 5px;
+  cursor: pointer;
+  border-radius: 3px;
+}
