Создание окна изменения задач

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -17,3 +17,7 @@
 
 @color-feedback: red;
 @color-black: rgba(0, 0, 0, 0.12);
+
+@toggle-indicator-size: 24px;
+@track-height: @toggle-indicator-size + 6;
+@track-width: @toggle-indicator-size * 2.5;
