--- a/src/index.less
+++ b/src/index.less
@@ -5,18 +5,11 @@
 
 @import "./components/Button/Button.less";
 @import "./components/Card/Card.less";
-//@import './components/Checkbox/Checkbox.less';
-@import "./components/Input/Input.less";
+@import "./components/InputsContainer/InputsContainer.less";
 
 @font-face {
   font-family: "PoorStory-Regular";
-  src: url("./fonts/poor-story/PoorStory-Regular.eot");
-  src: url("./fonts/poor-story/PoorStory-Regular.eot?#iefix")
-      format("embedded-opentype"),
-    url("./fonts/poor-story/PoorStory-Regular.svg#PoorStory-Regular")
-      format("svg"),
-    url("./fonts/poor-story/PoorStory-Regular.ttf") format("truetype"),
-    url("./fonts/poor-story/PoorStory-Regular.woff") format("woff"),
+  src: url("./fonts/poor-story/PoorStory-Regular.woff") format("woff"),
     url("./fonts/poor-story/PoorStory-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
@@ -24,11 +17,7 @@
 
 @font-face {
   font-family: "Oswald-Light";
-  src: url("./fonts/oswald/Oswald-Light.eot");
-  src: url("./fonts/oswald/Oswald-Light.eot?#iefix") format("embedded-opentype"),
-    url("./fonts/oswald/Oswald-Light.svg#Oswald-Light") format("svg"),
-    url("./fonts/oswald/Oswald-Light.ttf") format("truetype"),
-    url("./fonts/oswald/Oswald-Light.woff") format("woff"),
+  src: url("./fonts/oswald/Oswald-Light.woff") format("woff"),
     url("./fonts/oswald/Oswald-Light.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
