--- a/src/components/Card/Card.less
+++ b/src/components/Card/Card.less
@@ -26,7 +26,7 @@
   box-shadow: 0px 4px 5px @color-black;
 }
 
-.card-header_name {
+.card-header__name {
   font-size: 1.125rem;
   line-height: 1;
   letter-spacing: 0.03em;
