--- a/src/components/InputsContainer/InputsContainer.less
+++ b/src/components/InputsContainer/InputsContainer.less
@@ -1,13 +1,13 @@
-.input-container {
+.inputs-container {
   display: flex;
   flex-direction: column;
   gap: 8px;
   width: 100%;
-  /* max-width: 441px; */
   min-width: 312px;
 }
 
-.input {
+.input,
+.textarea {
   background: @color-white;
   box-shadow: 0px 1px 2px @color-black;
   border-radius: 4px;
@@ -18,17 +18,6 @@
   line-height: 100%;
   letter-spacing: inherit;
   font-family: inherit;
-}
-
-.input::-webkit-input-placeholder,
-.input::-moz-placeholder,
-.input:-ms-input-placeholder {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1rem;
-  line-height: 100%;
-  letter-spacing: inherit;
-  color: @color-grey;
 }
 
 .textarea {
