Добавление файлов в задачу

--- a/src/pages/Modal/Modal.less
+++ b/src/pages/Modal/Modal.less
@@ -180,3 +180,11 @@
   font-size: 0.9rem;
   gap: 15px;
 }
+
+.modal__main_card-files {
+  display: flex;
+}
+
+.card-files__url {
+  width: calc(100% / 3);
+}
