--- a/src/pages/Modal/Modal.less
+++ b/src/pages/Modal/Modal.less
@@ -16,6 +16,7 @@
   border-radius: 11px;
   padding: 50px 70px;
   position: relative;
+  max-width: 50%;
 }
 
 .modal__content-delete {
@@ -187,4 +188,33 @@
 
 .card-files__url {
   width: calc(100% / 3);
+}
+
+.file {
+  min-width: 15%;
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+}
+
+.file__url {
+  width: 20px;
+  height: 20px;
+}
+
+.file__url img {
+  width: 100%;
+  height: 100%;
+}
+
+.file__close {
+  padding: 5px;
+}
+
+.files {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
+  gap: 30px;
 }
